Fix: table hover overflow-x on page and featured answers and comments

--- a/qa-styles.css
+++ b/qa-styles.css
@@ -81,6 +81,8 @@ html {
 html, body {
 	margin: 0;
 	padding: 0;
+
+	overflow-x: hidden;
 }
 
 body {
@@ -894,6 +896,7 @@ blockquote p {
 .qa-a-item-content,
 .qa-c-item-content {
 	word-wrap: break-word;
+	overflow-x: scroll;
 }
 
 .qa-q-item-content td,
@@ -911,9 +914,7 @@ blockquote p {
 	font-size: 14px;
 	margin-bottom: 20px;
 }
-.qa-q-view-content tr:hover, .qa-a-item-content tr:hover, .qa-c-item-content tr:hover {
-	background-color: #f4f4f4;
-}
+
 .qa-q-view-content th, .qa-a-item-content th, .qa-c-item-content th,
 .qa-q-view-content td, .qa-a-item-content td, .qa-c-item-content td {
 	padding: 10px;
@@ -3564,21 +3565,37 @@ form[name=admin_form] tr, form[name=points_form] tr {
 }
 
 @-webkit-keyframes answer-highlight {
-    0% { background-color: #ffffaa; }
-    100% { background-color: #fff; }
+    0% { background-color: #121212;
+		 border-radius: 8px; }
+	25% { background-color: #181818;
+		  border-radius: 8px; }
+	75% { background-color: #181818;
+		  border-radius: 8px; }
+    100% { background-color: #121212;
+		   border-radius: 8px; }
 }
 @keyframes answer-highlight {
-    0% { background-color: #ffffaa; }
-    100% { background-color: #fff; }
+    0% { background-color: #121212;
+		border-radius: 8px; }
+   25% { background-color: #181818;
+		 border-radius: 8px; }
+   75% { background-color: #181818;
+		 border-radius: 8px; }
+   100% { background-color: #121212;
+		  border-radius: 8px; }
 }
 
 @-webkit-keyframes comment-highlight {
-    0% { background-color: #ffffaa; }
-    100% { background-color: #f4f4f4; }
+    0% { background-color: #181818; }
+	25% { background-color: #242424; }
+	75% { background-color: #242424; }
+    100% { background-color: #181818; }
 }
 @keyframes comment-highlight {
-    0% { background-color: #ffffaa; }
-    100% { background-color: #f4f4f4; }
+    0% { background-color: #181818; }
+	25% { background-color: #242424; }
+	75% { background-color: #242424; }
+    100% { background-color: #181818; }
 }
 
 
